# CTFToolKit

./: .gitignore  README.md  main.py  project_tree.txt  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
core/: banner.py  cli.py  command.py  config.py  filetype.py  input.py  logger.py  utils.py
core/output/: __init__.py  dispatcher.py  formatter.py  json.py  table.py
crypto/: __init__.py  affine.py  analyzer.py  atbash.py  bacon.py  base.py  base32.py  base58.py  base64.py  base85.py  binary.py  caesar.py  detect.py  frequency.py  hash.py  hex.py  identify.py  morse.py  octal.py  railfence.py  rot13.py  solver.py  vigenere.py  xor.py
crypto/classical/: __init__.py  affine.py  atbash.py  bacon.py  caesar.py  morse.py  railfence.py  rot13.py  vigenere.py
crypto/encoders/: __init__.py  base32.py  base58.py  base64.py  base85.py  binary.py  hex.py  octal.py
crypto/modern/: __init__.py  rsa.py  xor.py
ctftoolkit/: main.py
forensic/: archive.py  entropy.py  exif.py  fileinfo.py  filetype.py  hashing.py  hexdump.py  pcap.py  strings.py
plugins/: crypto.py  forensic.py  web.py
plugins/crypto/: __init__.py  analyzer.py  base.py  classical.py  (+5 more)
rev/: checksec.py  checksec_elf.py  checksec_pe.py  disassembler.py  elf.py  engine.py  entropy.py  fileinfo.py  functions.py  hashes.py  hexdump.py  instruction_db.py  instructions.py  memory.py  models.py  parser.py  pe.py  reader.py  resolver.py  rop.py  search.py  strings.py  xrefs.py
tests/: keyboard.txt  test.py  test_hid.py  test_keyboard.py  test_tshark.py
usb/: hid.py  keyboard.py  parser.py
(+116 files in other folders)
